# BGG-Companion

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  .yamllint.yml  DockerFIle  Dockerfile  LICENSE  Makefile  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-digital-ocean.yml  first-interaction.yml  gh-flow.yml  learn-github-actions.yml  lint.yml
frontend/: package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx
src/: bgg_companion_api.py  bgg_companion_game_filter.py  bgg_companion_game_order.py  exceptions.py  test_front_end.py
src/cache/: AbstractCache.py  DummyCache.py
src/forms/: RandomGameForm.py
src/models/: BoardGame.py  Game.py  GameFilter.py
src/utils/: requests_retry_client.py  serialize_to_json.py
static/: app.js  collection.js  home.js  last_username.js  page_visits.js
templates/: collection.html  home.html
tests/: test_bgg_companion.py  test_bgg_companion_game_filter.py  test_bgg_companion_game_order.py
tests/models/: TestBggCompanionApiData.py  TestBggCompanionData.py  TestBggCompanionGameFilterData.py  TestBggCompanionGameOrderData.py  TestBggCompanionVariables.py
