[tool.poetry]
name = "bgg_companion"
version = "0.1.0"
description = ""
authors = ["JDGiardino <JDGiardino@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
xmltodict = "^0.12.0"
Flask = "^2.0.2"
cachetools = "^5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
