[tool.poetry]
name = "bgg_companion"
version = "0.1.0"
description = ""
authors = ["JDGiardino <JDGiardino@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
xmltodict = "^0.12.0"
Flask = "^2.0.2"
cachetools = "^5.0.0"
gunicorn = "^20.1.0"
self = "^2020.12.3"
yamllint = "^1.26.3"
black = "^22.3.0"
Flask-Cors = "^3.0.10"

[tool.black]
line-length = 88
target-version = ['py37']
extend-exclude = '/gunicorn_config.py'

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
